--- a/templates/user/login_freelancer.html
+++ b/templates/user/login_freelancer.html
@@ -32,7 +32,7 @@
               {% if messages %}
                   <div class="container mt-3">
                     {% for message in messages %}
-                        <div class="alert alert-danger d-flex" role="alert">
+                        <div class="alert alert-primary d-flex" role="alert">
                             {{ message }}
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
