--- a/templates/common/home.html
+++ b/templates/common/home.html
@@ -55,14 +55,23 @@
                 </div>
             </div>
         </nav>
-    
+
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-primary d-flex" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
     
         
         <!-- Header-->
         <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-lg-6">
-            <img src="https://www.shutterstock.com/image-photo/young-handsome-man-beard-wearing-600nw-1768126784.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            <img src="https://img.freepik.com/free-photo/young-modern-man-glasses-casual-outfit-standing-against-blue-background-smiling-happy-camera_1258-65658.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Welcome Creovaters!!</h1>
